--- a/index.html
+++ b/index.html
@@ -6,10 +6,31 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com">
     <title>Visual Web Maker</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/titlebar.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prettier/2.0.3/standalone.js"></script>
+    <script src="assets/titlebar.js"></script>
 </head>
 <body>
+    <!-- Barra de título personalizada estilo VSCode -->
+    <div class="titlebar">
+        <div class="titlebar-title">
+            <div class="logo">
+                <img src="assets/images/logo.svg" alt="">
+            </div>
+        </div>
+        <div class="titlebar-controls">
+            <button class="titlebar-button" id="minimize-button">
+                <i class="material-icons">remove</i>
+            </button>
+            <button class="titlebar-button" id="maximize-button">
+                <i class="material-icons">crop_square</i>
+            </button>
+            <button class="titlebar-button close" id="close-button">
+                <i class="material-icons">close</i>
+            </button>
+        </div>
+    </div>
     <div class="editor-container">
         <aside class="sidebar-left">
             <h2><i class="material-icons">code</i> Tags HTML</h2>
